--- a/style.css
+++ b/style.css
@@ -1,240 +1,105 @@
-html {
-  scroll-behavior: smooth;
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:focus {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  color: #787878;
-  background: #1B2473;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
-
-p, h1, h2, h3, h4, h5, h5 {
-  margin: 0;
-}
-
-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.form__div {
-  background-color: white;
-  box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.25);
-  max-width: 600px;
-  width: 100%;
-  height: 412px;
-  border-radius: 20px;
-}
-
-.form__top {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-
-}
-
-.login__link {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-right: 11px;
-  margin-top: 11px;
-}
-
-.login__link a {
-  color: #1A226B;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 14px;
-}
-
-.login__link a:hover {
-  text-decoration: underline;
-  transition: all .12s linear;
-}
-
-.header__name {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 3px;
-  margin-bottom: 13px;
-}
-
-.header__name h1 {
-  font-size: 50px;
-  font-weight: 700;
-}
-
-form {
-  padding-right: 46px;
-  padding-left: 34px;
-}
-
-.form__input__div {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin-bottom: 13px;
-}
-
-.form__title {
-  margin-left: 22px;
-  margin-bottom: 3px;
-}
-
-.form__title p {
-  font-size: 16px;
-  font-weight: 700;
-}
-
-.form__input__email div {
-  display: flex;
-  align-items: center;
-}
-
-.error-email {
-  font-size: 10px;
-  font-weight: 500;
-  color: #CB2424;
-  margin-left: 13px;
-  display: block;
-  height: 13px;
-}
-
-.error-password {
-  font-size: 10px;
-  font-weight: 500;
-  color: #CB2424;
-  margin-left: 13px;
-  display: block;
-  height: 13px;
-}
-.error-checkbox {
-  font-size: 10px;
-  font-weight: 500;
-  color: #CB2424;
-  margin-left: 13px;
-  display: block;
-  height: 13px;
-}
-
-.zvezda {
-  margin-right: 4px;
-  font-size: 18px;
-  font-weight: 700;
-  margin-top: -15px;
-}
-
-.email, .password{
-  width: 100%;
-  font-size: 28px;
-  font-weight: 700;
-  border: 2px solid #787878;
-  border-radius: 10px;
-  padding: 7px 0 6px 15px;
-}
-
-.email::placeholder, .password::placeholder {
-  color: #CCCCCC;
-}
-
-.checkbox__main div{
-  display: flex;
-  align-items: center;
-}
-
-.custom-checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-
-.custom-checkbox+label {
-  display: inline-flex;
-  align-items: center;
-  user-select: none;
-}
-
-.custom-checkbox+label::before {
-  content: '';
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  flex-shrink: 0;
-  flex-grow: 0;
-  border: 2px solid #787878;
-  border-radius: 7px;
-  margin-right: 10px;
+  position: relative;
+  background-image: url(./image/open_book.jpg);
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50% 50%;
+  z-index: 1;
 }
 
-.custom-checkbox:checked+label::before {
-  border-color: #0b76ef;
-  background-color: #0b76ef;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+
+h1, h2 {
+  text-align: center;
+  margin: 10px 0;
 }
 
-/* стили при наведении курсора на checkbox */
-.custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
-  border-color: #b3d7ff;
-}
-
-/* стили для активного состояния чекбокса (при нажатии на него) */
-.custom-checkbox:not(:disabled):active+label::before {
-  background-color: #b3d7ff;
-  border-color: #b3d7ff;
-}
-
-/* стили для чекбокса, находящегося в фокусе */
-.custom-checkbox:focus+label::before {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
-
-/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-.custom-checkbox:focus:not(:checked)+label::before {
-  border-color: #80bdff;
-}
-
-/* стили для чекбокса, находящегося в состоянии disabled */
-.custom-checkbox:disabled+label::before {
-  background-color: #e9ecef;
-}
-
-.checkbox__main .zvezda {
-  margin-top: 5px;
-}
-
-.politic {
-  font-size: 14px;
-}
-
-.button__div {
+.books {
+  margin: 0 auto;
   display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  margin-top: 13px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  max-width: 1300px;
 }
 
-.btn {
-  font-size: 24px;
-  font-weight: 700;
-  color: white;
-  background: #1A226B;
-  outline: none;
-  padding: 18px;
-  border: none;
-  line-height: 16px;
-  border-radius: 10px;
+h2>a{
+  color: darkkhaki;
 }
+
+.book {
+  position: relative;
+  flex-basis: 30%;
+  margin: 10px;
+  padding: 10px 30px 15px;
+  border: 1px solid #39373B;
+  color: ghostwhite;
+}
+
+.book:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(47, 50, 75, 0.90);
+  z-index: -1;
+}
+
+
+@-webkit-keyframes blink {
+  100% { color: rgba(34, 34, 34, 0); }
+}
+@keyframes blink {
+  100% { color: rgba(34, 34, 34, 0); }
+}
+
+.adv {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 10px;
+  width: 300px;
+  height: 200px;
+  background: #f8f8f8 url("./image/adv.jpg") no-repeat center top;
+  padding: 150px 0 0;
+  text-align: center;
+  border: 2px solid red;
+  border-radius: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.adv span{
+  -webkit-animation: blink 1s linear infinite;
+  animation: blink 1s linear infinite;
+}
+
